// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUITextArea additional functionality: should apply error styling if maxCharacters is exceeded 1`] = `
<div
  className="xui-field-layout"
>
  <div
    className="xui-u-flex xui-fieldlabel-layout"
  >
    <div
      className="xui-u-flex-horizontal xui-margin-left-auto xui-margin-top-auto"
    >
      <span
        className="xui-text-secondary"
        data-automationid="xui-textarea-counter"
      >
        9
      </span>
    </div>
  </div>
  <div
    className="xui-textinput"
  >
    <textarea
      className="xui-textinput--input xui-u-resize-none"
      data-automationid="xui-textarea-textarea"
      defaultValue="0123456789"
      disabled={undefined}
      id={undefined}
      onChange={[Function]}
      onMouseUp={[Function]}
      rows={3}
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`XUITextArea additional functionality: should render an automation id when a qaHook is passed 1`] = `
<div
  className="xui-field-layout"
>
  <div
    className="xui-textinput"
  >
    <textarea
      className="xui-textinput--input xui-u-resize-none"
      data-automationid="textarea-test-textarea"
      disabled={undefined}
      id={undefined}
      onChange={undefined}
      onMouseUp={[Function]}
      rows={3}
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`XUITextArea basic functionality: should apply disabled styling when isDisabled=true 1`] = `
<div
  className="xui-field-layout"
>
  <div
    className="xui-textinput xui-textinput-is-disabled"
  >
    <textarea
      className="xui-textinput--input xui-u-resize-none"
      data-automationid="xui-textarea-textarea"
      disabled={true}
      id={undefined}
      onChange={undefined}
      onMouseUp={[Function]}
      rows={3}
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    />
  </div>
</div>
`;
